--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,98 @@
+<div cdsTheme="white">
+	<cds-header name="[Portfolio]" [route]="['/']">
+		<cds-header-navigation>
+			<cds-header-item routerLink="experience">Experience</cds-header-item>
+			<cds-header-item routerLink="skills">Skills</cds-header-item>
+			<cds-header-item routerLink="technologies">Technologies</cds-header-item>
+			<cds-header-menu title="Manage">
+				<cds-header-item routerLink="link1">Link 1</cds-header-item>
+				<cds-header-item>Link 2</cds-header-item>
+				<cds-header-item>Link 3</cds-header-item>
+			</cds-header-menu>
+		</cds-header-navigation>
+		<cds-header-global>
+			<cds-header-action title="action">
+				<svg cdsIcon="notification" size="20"></svg>
+			</cds-header-action>
+			<cds-header-action title="action">
+				<svg cdsIcon="user--avatar" size="20"></svg>
+			</cds-header-action>
+		</cds-header-global>
+	</cds-header>
+</div>
+
+<br>
+<br>
+<br>
+
+<section id="accueil" class="hero">
+</section>
+
+<div class="starter-home" cdsGrid>
+	<h1 class="title"> <br><br>Introduction</h1> <br><br>
+	<div class="body-text" cdsRow>
+		<div cdsCol [columnNumbers]="{'lg': 6, 'md': 12, 'sm': 12}">
+      <section class="container">
+        
+        <p>Hello and welcome to my portfolio.</p>
+        <br>
+        
+        <p>My name is Leon Dukuze, and I hold a degree in IT Services for Organizations (BTS-SIO) with a specialization in software development (SLAM).</p> 
+        
+        <br>
+        
+        <p> I am currently pursuing further studies as an Application Developer, 
+           aiming to enhance my skills by obtaining a Bachelor's degree.</p>
+        
+        <br>
+        
+        <p>As part of my BTS program, I completed a total of 16 weeks of internships spread over two years.</p>        
+        <br>
+        
+        <p>This portfolio showcases my professional journey, the supervised projects</p>
+         <p> I worked on during my BTS and Application Developer training, and concludes with a presentation on a technological watch topic.</p>
+        
+        <br>
+        
+        <p>I hope you enjoy your visit!</p>
+        
+        
+        </section>
+		</div>
+		<div cdsCol [columnNumbers]="{'lg': 6, 'md': 12, 'sm': 12}">
+      <embed src="../assets/CV_LD_EN.pdf" width="600" height="500" type="application/pdf" class = "pdf-container">
+		</div>
+	</div>
+
+<br><br>
+
+  <cds-accordion align="start" size="md">
+    <cds-accordion-item title="Stage de Première Année - GHU Paris : (D.I.T.S.I)">
+      <p><u>Stage en informatique</u> : (1 mois)</p>
+      <img src="../assets/ghu.png" alt="GHU-PARIS" class="experience-image">
+      <p><u>Description</u> : Développement d'un formulaire destiné aux patients listant les différents troubles et addictions les concernant.<br>Langage, Framework : PHP, Laravel.</p>
+    </cds-accordion-item>
+
+    <cds-accordion-item title="Stage de Première Année - CODECODECODEC">
+      <p><u>Stage en informatique</u> : (1 semaine)</p>
+      <img src="../assets/codec.png" alt="CODECODECODEC" class="experience-image2">
+      <p><u>Description</u> : Former des jeunes écoliers aux fondements de la programmation à l’aide du langage Scratch.</p>
+      <p><u>Site web</u> : <a href="https://codecodecodec.com/" target="_blank">codecodecodec.com</a><br>
+      <u>Secteurs</u> : Établissement d’enseignement Informatique.</p>
+    </cds-accordion-item>
+
+    <cds-accordion-item title="Stage de Deuxième Année - Sparkers">
+      <p><u>Junior Front-End Developer</u> : (2 mois)</p>
+      <img src="../assets/sparkers.png" alt="Sparkers" class="experience-image3">
+      <p><u>Description</u> : Rédaction d'une documentation technique et mise en place d'une SandBox de leurs librairies Angular.</p>
+      <p><u>Site web</u> : <a href="https://www.sparkers.com/" target="_blank">sparkers.com</a><br>
+      <u>Secteurs</u> : Technologies et services de l’information.</p>
+    </cds-accordion-item>
+  </cds-accordion>
+	
+  <br><br>
+
+
 <h1>Test des features de Carbon</h1>
 <br>
 
@@ -359,3 +454,24 @@
 </cds-structured-list>
 
 
+<footer class="cds--footer">
+  <div class="cds--grid">
+    <div class="cds--row">
+      <div class="cds--col-lg-4 cds--col-md-6">
+        <h4>Contact Information</h4>
+        <p>
+          <strong>Address:</strong> 401 rue de mérode, Forest, Belgium
+        </p>
+        <p>
+          <strong>Phone:</strong>   +33782406648
+        </p>
+        <p>
+          <strong>Email:</strong> <a href="mailto:info@example.com">  dukuze8leon&#64;gmail.com</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+<router-outlet></router-outlet>
