--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,8 +25,18 @@
 <br>
 <br>
 
-<section id="accueil" class="hero">
-</section>
+<div class="hero-container">
+  <div class="hero-content">
+    <h1 class="hero-title">Welcome to My Portfolio</h1>
+    <p class="hero-subtitle">
+      Discover my work, projects, and the experience I've gained throughout my journey as a web developer.
+    </p>
+    <button class="hero-button" (click)="onLearnMore()">Learn More</button>
+  </div>
+</div>
+
+<!-- <section id="accueil" class="hero">
+</section> -->
 
 <div class="starter-home" cdsGrid>
 	<h1 class="title"> <br><br>Introduction</h1> <br><br>
@@ -68,25 +78,44 @@
 
   <cds-accordion align="start" size="md">
     <cds-accordion-item title="Stage de Première Année - GHU Paris : (D.I.T.S.I)">
-      <p><u>Stage en informatique</u> : (1 mois)</p>
+      <p><u>IT internships</u> : (1 month)</p>
       <img src="../assets/ghu.png" alt="GHU-PARIS" class="experience-image">
-      <p><u>Description</u> : Développement d'un formulaire destiné aux patients listant les différents troubles et addictions les concernant.<br>Langage, Framework : PHP, Laravel.</p>
+      <p><u>Description</u> : Development of a form for patients, listing the various disorders and addictions relevant to them.
+       <br> Language, Framework: PHP, Laravel.</p>
     </cds-accordion-item>
 
     <cds-accordion-item title="Stage de Première Année - CODECODECODEC">
-      <p><u>Stage en informatique</u> : (1 semaine)</p>
+      <p><u>IT internships</u> : (1 week)</p>
       <img src="../assets/codec.png" alt="CODECODECODEC" class="experience-image2">
-      <p><u>Description</u> : Former des jeunes écoliers aux fondements de la programmation à l’aide du langage Scratch.</p>
-      <p><u>Site web</u> : <a href="https://codecodecodec.com/" target="_blank">codecodecodec.com</a><br>
-      <u>Secteurs</u> : Établissement d’enseignement Informatique.</p>
+      <p><u>Description</u> : Teaching young students the fundamentals of programming using the Scratch language..</p>
+      <br>
+      <p><u>Web-Site</u> : <a href="https://codecodecodec.com/" target="_blank">codecodecodec.com</a>
+      <br><br>
+      <u>Business sectors</u> : Computer Science Educational Institution..</p>
     </cds-accordion-item>
 
     <cds-accordion-item title="Stage de Deuxième Année - Sparkers">
-      <p><u>Junior Front-End Developer</u> : (2 mois)</p>
-      <img src="../assets/sparkers.png" alt="Sparkers" class="experience-image3">
-      <p><u>Description</u> : Rédaction d'une documentation technique et mise en place d'une SandBox de leurs librairies Angular.</p>
-      <p><u>Site web</u> : <a href="https://www.sparkers.com/" target="_blank">sparkers.com</a><br>
-      <u>Secteurs</u> : Technologies et services de l’information.</p>
+      <p><u>Junior Front-End Developer</u> : (2 month)</p>
+      <img src="../assets/sparkers.png" alt="Sparkers" class="experience-image3"> <br><br>
+      <p><u>Description</u> : <br>
+        The company focuses on the analysis and processing of data from various companies, 
+        particularly in the entertainment sector (video games, etc.), specifically sales data from all countries in the BENELUX region. 
+        The company structures and makes this data intelligible, which is then redistributed to its various partners (clients). 
+        The data is neither sold nor stored.
+      </p>
+      <br>
+      <p>
+        The Part-E-Invoicing team is responsible for handling the billing data of the companies.
+      </p>
+      <br>
+      <p>
+        My role within the company involved writing technical documentation (in English) and setting up a sandbox for their Angular libraries.
+      </p>
+
+      <br>
+      <p><u>Web-Site</u> : <a href="https://www.sparkers.com/" target="_blank">sparkers.com</a><br>
+      <br>
+      <u>Business sectors</u> : Information Technologies and Services.</p>
     </cds-accordion-item>
   </cds-accordion>
 	
