--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,3 +51,47 @@
     height: 210px;
     width: 450px;
 }
+
+.hero-container {
+  background-image: url('../assets/server.jpg');  /* Chemin vers votre image d'arrière-plan */
+  background-size: cover;
+  background-position: center;
+  height: 55vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(252, 252, 252);
+  text-align: center;
+}
+
+.hero-content {
+  max-width: 600px;
+}
+
+.hero-title {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.hero-subtitle {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+  font-weight: bold;
+
+}
+
+.hero-button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.hero-button:hover {
+  background-color: #0056b3;
+}
